--- a/sampleapp/persistence/build.gradle
+++ b/sampleapp/persistence/build.gradle
@@ -9,18 +9,21 @@ android {
     buildToolsVersion versions.buildtool
 
     defaultConfig {
-        applicationId "com.github.jacubsz.sampleapp"
+        applicationId "com.github.jacubsz.sampleapp.persistence"
         minSdkVersion versions.min_sdk
         targetSdkVersion versions.target_sdk
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas")
+            }
+        }
     }
 
-    buildFeatures {
-        dataBinding = true
-    }
     buildTypes {
         release {
             minifyEnabled false
@@ -34,9 +37,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        dataBinding true
-    }
 }
 
 dependencies {
@@ -44,16 +44,16 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
     implementation "androidx.core:core-ktx:$versions.ktx"
     implementation "androidx.appcompat:appcompat:$versions.appcompat"
-    implementation "com.google.android.material:material:$versions.android_material"
 
     implementation "com.google.dagger:dagger-android:$versions.dagger"
     implementation "com.google.dagger:dagger-android-support:$versions.dagger"
     kapt "com.google.dagger:dagger-android-processor:$versions.dagger"
     kapt "com.google.dagger:dagger-compiler:$versions.dagger"
 
-    implementation "io.reactivex.rxjava3:rxandroid:$versions.rxandroid"
-    implementation "io.reactivex.rxjava3:rxjava:$versions.rxjava"
-    implementation "io.reactivex.rxjava3:rxkotlin:$versions.rxkotlin"
+    implementation "androidx.room:room-runtime:$versions.room"
+    implementation "androidx.room:room-rxjava3:$versions.room"
+    annotationProcessor "androidx.room:room-compiler:$versions.room"
+    kapt "androidx.room:room-compiler:$versions.room"
 
     testImplementation "junit:junit:$versions.junit4"
     androidTestImplementation "androidx.test.ext:junit:$versions.junit_ext"
