--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -1,22 +1,32 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.appcompat_version = "1.3.0"
-    ext.buildgradle_version = "4.2.1"
-    ext.dagger_version = "2.36"
-    ext.junit4_version = "4.13.2"
-    ext.kotlin_version = "1.5.10"
-    ext.ktx_version = "1.5.0"
-    ext.rxandroid_version = "3.0.0"
-    ext.rxjava_version = "3.0.13"
-    ext.rxkotlin_version = "3.0.1"
+    ext.versions = [:]
+
+    versions.min_sdk = 25
+    versions.target_sdk = 30
+
+    versions.android_material = "1.3.0"
+    versions.appcompat = "1.3.0"
+    versions.buildgradle = "4.2.1"
+    versions.buildtool = "30.0.3"
+    versions.dagger = "2.36"
+    versions.espresso = "3.3.0"
+    versions.junit_ext = "1.1.2"
+    versions.junit4 = "4.13.2"
+    versions.kotlin = "1.5.10"
+    versions.ktx = "1.5.0"
+    versions.room = "2.3.0"
+    versions.rxandroid = "3.0.0"
+    versions.rxjava = "3.0.13"
+    versions.rxkotlin = "3.0.1"
 
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$buildgradle_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$versions.buildgradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
