--- a/sampleapp/authorizationplugin/build.gradle
+++ b/sampleapp/authorizationplugin/build.gradle
@@ -1,13 +1,12 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
     compileSdkVersion versions.target_sdk
-    buildToolsVersion "30.0.3"
+    buildToolsVersion versions.buildtool
 
     defaultConfig {
-        applicationId "com.github.jacubsz.authorizationplugin"
         minSdkVersion versions.min_sdk
         targetSdkVersion versions.target_sdk
         versionCode 1
@@ -30,9 +29,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "io.reactivex.rxjava3:rxandroid:$versions.rxandroid"
+    implementation "io.reactivex.rxjava3:rxjava:$versions.rxjava"
+    implementation "io.reactivex.rxjava3:rxkotlin:$versions.rxkotlin"
+
+    testImplementation "junit:junit:$versions.junit4"
+    androidTestImplementation "androidx.test.ext:junit:$versions.junit_ext"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$versions.espresso"
+
 }
