Dependency Inversion Principle implemented with Business Logic Centre and Persistence Module

--- a/sampleapp/settings.gradle
+++ b/sampleapp/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = "SampleApplication"
 include ':app'
 include ':authorizationplugin'
 include ':persistence'
+include ':businesslogiccentre'
