--- a/sampleapp/businesslogiccentre/build.gradle
+++ b/sampleapp/businesslogiccentre/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
-    id 'kotlin-kapt'
 }
 
 android {
@@ -9,7 +8,6 @@ android {
     buildToolsVersion versions.buildtool
 
     defaultConfig {
-        applicationId "com.github.jacubsz.sampleapp"
         minSdkVersion versions.min_sdk
         targetSdkVersion versions.target_sdk
         versionCode 1
@@ -18,9 +16,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildFeatures {
-        dataBinding = true
-    }
     buildTypes {
         release {
             minifyEnabled false
@@ -34,30 +29,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        dataBinding true
-    }
 }
 
 dependencies {
-
-    implementation project(":persistence")
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
-    implementation "androidx.core:core-ktx:$versions.ktx"
-    implementation "androidx.appcompat:appcompat:$versions.appcompat"
-    implementation "com.google.android.material:material:$versions.android_material"
-
-    implementation "com.google.dagger:dagger-android:$versions.dagger"
-    implementation "com.google.dagger:dagger-android-support:$versions.dagger"
-    kapt "com.google.dagger:dagger-android-processor:$versions.dagger"
-    kapt "com.google.dagger:dagger-compiler:$versions.dagger"
 
     implementation "io.reactivex.rxjava3:rxandroid:$versions.rxandroid"
     implementation "io.reactivex.rxjava3:rxjava:$versions.rxjava"
     implementation "io.reactivex.rxjava3:rxkotlin:$versions.rxkotlin"
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
+    implementation "androidx.core:core-ktx:$versions.ktx"
     testImplementation "junit:junit:$versions.junit4"
     androidTestImplementation "androidx.test.ext:junit:$versions.junit_ext"
     androidTestImplementation "androidx.test.espresso:espresso-core:$versions.espresso"
+
 }
