--- a/sampleapp/app/src/main/AndroidManifest.xml
+++ b/sampleapp/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SampleApplication">
         <activity
-            android:name=".view.ScrollingActivity"
+            android:name=".view.ToDoListActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.SampleApplication.NoActionBar">
             <intent-filter>
@@ -20,6 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".view.AddNewToDoItemActivity"
+            android:label="@string/add_new_todo_item"
+            android:theme="@style/Theme.SampleApplication.NoActionBar" />
+
     </application>
 
 </manifest>
