--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -15,6 +15,7 @@ buildscript {
     versions.junit4 = "4.13.2"
     versions.kotlin = "1.5.10"
     versions.ktx = "1.5.0"
+    versions.mockito = "3.2.0"
     versions.room = "2.3.0"
     versions.rxandroid = "3.0.0"
     versions.rxjava = "3.0.13"
