--- a/sampleapp/persistence/build.gradle
+++ b/sampleapp/persistence/build.gradle
@@ -21,6 +21,10 @@ android {
                 arg("room.schemaLocation", "$projectDir/schemas")
             }
         }
+
+        sourceSets {
+            getByName("androidTest").assets.srcDirs += "$projectDir/schemas"
+        }
     }
 
     buildTypes {
@@ -58,5 +62,8 @@ dependencies {
 
     testImplementation "junit:junit:$versions.junit4"
     testImplementation "org.mockito.kotlin:mockito-kotlin:$versions.mockito"
+    androidTestImplementation "androidx.room:room-testing:$versions.room"
     androidTestImplementation "androidx.test.ext:junit:$versions.junit_ext"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$versions.espresso"
+
 }
