Basic UI Automator integration - smoke tests with all most important flows

--- a/sampleapp/app/build.gradle
+++ b/sampleapp/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     androidTestImplementation "io.mockk:mockk-android:$versions.mockk_android"
     androidTestImplementation "androidx.test.ext:junit:$versions.junit_ext"
     androidTestImplementation "androidx.test.espresso:espresso-core:$versions.espresso"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:$versions.uiautomator"
 }
