--- a/sampleapp/app/src/main/AndroidManifest.xml
+++ b/sampleapp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:theme="@style/Theme.SampleApplication">
         <activity
             android:name=".view.ToDoListActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SampleApplication.NoActionBar">
             <intent-filter>
@@ -23,11 +24,13 @@
 
         <activity
             android:name=".view.AddNewToDoItemActivity"
+            android:exported="false"
             android:label="@string/add_new_todo_item"
             android:theme="@style/Theme.SampleApplication.NoActionBar" />
 
         <activity
             android:name=".view.AboutActivity"
+            android:exported="false"
             android:label="@string/about_header"
             android:theme="@style/Theme.SampleApplication.NoActionBar" />
 
