--- a/sampleapp/app/build.gradle
+++ b/sampleapp/app/build.gradle
@@ -15,6 +15,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField("String", "NETWORKING_HOST", "\"http://10.0.2.2\"")
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         configurations {
             androidTestImplementation.setCanBeResolved(true)
@@ -45,6 +47,7 @@ android {
 dependencies {
 
     implementation project(":persistence")
+    implementation project(":networking")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
     implementation "androidx.core:core-ktx:$versions.ktx"
