--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     versions.target_sdk = 31
 
     versions.android_material = "1.4.0"
-    versions.appcompat = "1.3.0"
+    versions.appcompat = "1.3.1"
     versions.buildgradle = "7.0.0"
     versions.buildtool = "30.0.3"
     versions.dagger = "2.36"
@@ -17,6 +17,7 @@ buildscript {
     versions.ktx = "1.6.0"
     versions.mockito = "3.2.0"
     versions.mockk_android = "1.12.0"
+    versions.retrofit = "2.9.0"
     versions.room = "2.3.0"
     versions.rxandroid = "3.0.0"
     versions.rxjava = "3.0.13"
@@ -29,7 +30,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$versions.buildgradle"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
